Create temp file in system default location Fix case issues in attachment list

--- a/webapp/src/main/webapp/admin/attachments/list.xhtml
+++ b/webapp/src/main/webapp/admin/attachments/list.xhtml
@@ -18,11 +18,11 @@
                 </h:column>
                 <h:column>
                     <f:facet name="header"><h:outputText style="font-weight: bold;" value="File Name"/></f:facet>
-                    #{attachment.fileName}
+                    #{attachment.filename}
                 </h:column>
                 <h:column>
                     <f:facet name="header"><h:outputText style="font-weight: bold;" value="Mime Type"/></f:facet>
-                    #{attachment.mimeType}
+                    #{attachment.mimetype}
                 </h:column>
                 <h:column>
                     <f:facet name="header"><h:outputText style="font-weight: bold;" value="Attached To"/></f:facet>
