Added PrePersist and PreUpdate methods to BlogEntry to handle timestamps Case fixes in Attachment Added "sticky" support to BlogEntry Home page now returns top X most recent entries (currently hardcoded to 10) Added AttachmentHandlerPhaseListener to allow for nicer URLs to fetch attachments

--- a/webapp/src/main/webapp/admin/attachments/list.xhtml
+++ b/webapp/src/main/webapp/admin/attachments/list.xhtml
@@ -18,7 +18,7 @@
                 </h:column>
                 <h:column>
                     <f:facet name="header"><h:outputText style="font-weight: bold;" value="File Name"/></f:facet>
-                    #{attachment.filename}
+                    #{attachment.fileName}
                 </h:column>
                 <h:column>
                     <f:facet name="header"><h:outputText style="font-weight: bold;" value="Mime Type"/></f:facet>
