--- a/webapp/src/main/webapp/admin/index.xhtml
+++ b/webapp/src/main/webapp/admin/index.xhtml
@@ -7,6 +7,7 @@
     <ui:define name="content">
         <h1>Meetspace Administration</h1>
         <ul style="margin-left: 15px">
+            <li><h:outputLink value="#{request.contextPath}/admin/attachments/list.jsf">Attachments</h:outputLink></li>
             <li><h:outputLink value="#{request.contextPath}/admin/meetings/list.jsf">Meetings</h:outputLink></li>
             <li><h:outputLink value="#{request.contextPath}/admin/members/list.jsf">Members</h:outputLink></li>
             <li><h:outputLink value="#{request.contextPath}/admin/sponsors/list.jsf">Sponsors</h:outputLink></li>
